--- a/TODO
+++ b/TODO
@@ -7,7 +7,8 @@ TODO
 36. Co delat u Indent::PerlStruct v pripade, ze indentuji perl tridu?
 Pridal jsem ji k HASH.
 37. Pridat testy pro Indent::PerlStruct, ktere budou vykreslovat tridu.
-38.
+38. Odstranit firts, second, tmp1, tmp2 promenne.
+39.
 
 Applied
 =======
