--- a/TODO
+++ b/TODO
@@ -4,7 +4,17 @@ TODO
 40. Pridat testy s utf8 textem.
 41. U Indent::PerlStruct by bylo dobre \t a \n vykreslovat jako tyhle zkratky.
 42. U Indent::PerlStruct by bylo dobre u tridy psat, ze je to trida.
-43.
+43. Udelat Indent::String:
+    indent($string, $type, [10, 20]); # 10 pismen, 20 pismen na radek.
+    $type: strict (reze po znaku), word (reze po slovech), ??
+    Funkce ma slouzit k tomu, abych s ni mohl generovat indentovane printy.
+    Objekt: 'next_indent', 'line_size', 'output_sep', ??
+    V Perlu: 
+    print "111".
+            "dalsi".
+            "dalsi";
+    Nedela tohle uz nejaky indent?
+44.
 
 Applied
 =======
