--- a/TODO
+++ b/TODO
@@ -15,7 +15,9 @@ TODO
             "dalsi";
     Nedela tohle uz nejaky indent?
 45. Doresit Indent::Sexpression.
-47.
+47. Test Indent::Block s 'char', undef, 'char'?
+    Jak by se to melo chovat?
+48.
 
 Applied
 =======
