--- a/TODO
+++ b/TODO
@@ -12,7 +12,6 @@ TODO
             "dalsi".
             "dalsi";
     Nedela tohle uz nejaky indent?
-45. Doresit Indent::Sexpression.
 47. Test Indent::Block s 'char', undef, 'char'?
     Jak by se to melo chovat?
 49. Bylo by dobre resit situaci, kdy reknu, ze na prvnim radku je implicitni
@@ -191,4 +190,8 @@ NONE [20110607] skim
 48. Pridat do t/Indent::PerlStruct/13_numbers.t test pro zaporne cisla.
     A opravit Indent::PerlStruct.
 Přesunuto do Indent::PerlStruct modulu.
+NONE [20110607] skim
+
+45. Doresit Indent::Sexpression.
+Je to samostatný modul Indent::Sexpression.
 NONE [20110607] skim
