Common: Improve SEE ALSO section in doc.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  [Common]
  - Fix LICENSE file.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Improve SEE ALSO section in doc.
  - Update Module::Install to 1.16 version.
  - Update copyright years.
 
