--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  [Common]
  - Fix LICENSE file.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Improve README file.
  - Improve SEE ALSO section in doc.
  - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
