--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 MODULES
-    Indent::Utils - Utilities for Indent classes.
+    Indent modules.
 
 CLASSES
     Indent - Class for indent handling.
@@ -7,6 +7,7 @@ CLASSES
     Indent::Data - Class for data indenting.
     Indent::String - Class for text indenting.
     Indent::Word - Class for word indenting.
+    Indent::Utils - Utilities for Indent classes.
 
 EXAMPLES
     See man pages of each class or module.
@@ -20,7 +21,8 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD license.
+    © 2005-2015 Michal Špaček
+    BSD 2-Clause License
 
 VERSION
     0.04
