--- a/README
+++ b/README
@@ -16,12 +16,12 @@ REPOSITORY
     <https://github.com/tupinek/Indent>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2005-2015 Michal Špaček
+    © 2005-2015 Michal Josef Špaček
     BSD 2-Clause License
 
 VERSION
