Update author github username to reality
Signed-off-by: Michal Josef Špaček <tupinek@gmail.com>

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.06
  [Common]
  - Update .travis.yml to reality.
+ - Update author github username to reality.
 
 0.05 2018-02-10T14:56:42+01:00
  [Common]
