--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  [Common]
  - Update .travis.yml to reality.
  - Update author github username to reality.
+ - Update copyright years.
 
 0.05 2018-02-10T14:56:42+01:00
  [Common]
