--- a/TODO
+++ b/TODO
@@ -23,6 +23,7 @@ TODO
 53. Do Indent::Word prikladu pridat benchmark oproti Text::Wrap::wrap();
     Je v perl/MODULES/Text-Wrap/ex4.pl
 54. V Indent::Word je Text::ANSI::Util, ktere je obsolete. Nahradit.
+Text::ANSI::WideUtil?
 55.
 
 Applied
