--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 0.09
+ [Common]
+ - Update Module::Install to 1.21 version.
+
  [Indent::Word]
  - Add explicit 'ansi' parameter to tests. To reproducible tests.
 
