--- a/Changes
+++ b/Changes
@@ -5,6 +5,8 @@
 
  [Indent::Word]
  - Add explicit 'ansi' parameter to tests. To reproducible tests.
+ - Fix warning in 'ansi' mode in situation when the length of the
+   non-breaking string is greater than indent length. Add test.
 
 0.08 2021-06-28T14:44:11+02:00
  [Common]
